# myflet-extlib

./: pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
myflet_extlib/: main.py
